UserController test cases work in progress